# Eastworld-AutonomousFleetStack

./: .gitignore  .gitmodules  README.md
edge/: pyproject.toml
edge/maps/: office_map.pcd
edge/scripts/: calibrate_pitch.py  can1.service  setup_can.sh
edge/src/FAST-LIVO2/: CMakeLists.txt  package.xml
edge/src/FAST-LIVO2/Log/: imu.txt  mat_out.txt  mat_pre.txt
edge/src/FAST-LIVO2/Log/PCD/: all_raw_points.pcd
edge/src/FAST-LIVO2/Log/result/: eastworld_01.txt
edge/src/FAST-LIVO2/include/: LIVMapper.h  voxel_map.h
edge/src/FAST-LIVO2/src/: LIVMapper.cpp  preprocess.cpp  voxel_map.cpp
edge/src/eastworld_bringup/: CMakeLists.txt  package.xml
edge/src/eastworld_bringup/behavior_trees/: navigate_to_pose_w_smooth.xml
edge/src/eastworld_bringup/config/: cyclonedds.xml  cyclonedds_network.xml  fast-livo.rviz  mid360.yaml  nav.rviz  nav2_params.yaml  nav2_params_keepout.yaml  nav2_params_slam.yaml  relocalize_params.yaml  slam_toolbox_params.yaml
edge/src/eastworld_bringup/launch/: bringup.launch.py  navigation.launch.py  view_tf_tree.launch.py
edge/src/eastworld_bringup/scripts/: restamp_cloud.py  start_autonomy_stack.sh  start_nav2_mapping.sh  test_can.py
edge/src/eastworld_bringup/systemd/: eastworld-autonomy.service
edge/src/eastworld_bringup/test/: test_ekf.launch.py  test_scout_can.launch.py  test_tf_tree.launch.py
edge/src/eastworld_bringup/urdf/: scout_mini.urdf.xacro
edge/src/fleet_streamer/: CMakeLists.txt  package.xml
edge/src/fleet_streamer/config/: fleet_streamer.yaml
edge/src/fleet_streamer/launch/: fleet_streamer.launch.py
edge/src/fleet_streamer/scripts/: cloud_bridge.py  pose_bridge.py  telem_bridge.py  zed_webrtc_streamer.py
edge/src/livox_ros_driver2/: CMakeLists.txt
edge/src/livox_ros_driver2/launch_ROS1/: rviz_MID360.launch
edge/src/livox_ros_driver2/launch_ROS2/: msg_MID360_launch.py  rviz_MID360_launch.py
edge/src/livox_ros_driver2/src/: lddc.cpp
edge/src/pcd_relocalize/: CMakeLists.txt  package.xml
edge/src/pcd_relocalize/config/: relocalize_params.yaml
edge/src/pcd_relocalize/include/pcd_relocalize/: pcd_relocalizer.hpp
edge/src/pcd_relocalize/src/: pcd_relocalizer.cpp  pcd_to_map.cpp  relocalize_node.cpp
edge/src/scout_ros2/scout_base/include/scout_base/: scout_base_ros.hpp  scout_messenger.hpp
edge/src/scout_ros2/scout_base/launch/: scout_mini_base.launch.py
edge/src/scout_ros2/scout_base/src/: scout_base_ros.cpp
edge/src/ugv_sdk/src/protocol_v2/: agilex_msg_parser_v2.c
host/: pyproject.toml
host/server/: config.yaml  fleet_server.py  robot_session.py  signaling.py  web_relay.py
host/tools/: pcd_to_web.py
host/web/: index.html  package-lock.json  package.json  vite.config.ts
host/web/public/maps/: office_map.drc
host/web/src/: App.tsx
host/web/src/components/: DockablePanel.tsx  FleetSidebar.tsx  FleetViewer3D.tsx  PointCloudLayer.tsx  RobotMarker.tsx  VideoGrid.tsx
host/web/src/hooks/: useFleetSocket.ts  useRobotWebRTC.ts
host/web/src/lib/: protocol.ts
scripts/: setup_sparse_checkout.sh
shared/: protocol.py
