<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pcd_relocalize</name>
  <version>0.1.0</version>
  <description>
    PCD-based relocalization using TEASER++ global registration and small_gicp ICP refinement.
    Also provides pcd_to_map CLI for offline PCD to 2D occupancy grid conversion.
  </description>
  <maintainer email="shoonkit@virtuals.io">EastWorld's Janitor</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <build_depend>eigen</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
